--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: dragonroll-gameserver
     environment:
-      SQLALCHEMY_DATABASE_URI: postgresql://postgres:postgres@db/dragonroll_dev
+      DB_URI: postgresql://postgres:postgres@db/dragonroll_dev
     ports:
       - "8000:80"
     depends_on:
